Fix for minor glitch tab subnav positioning on mobile

--- a/src/styles/modules/tabs.less
+++ b/src/styles/modules/tabs.less
@@ -74,9 +74,6 @@ Tabbed Content
 
         @media screen and (max-width: @screen-xs-max) { // Phone
             border: 1px solid #ddd;
-            .nav-tabs {
-                border-bottom: 0px;
-            }
             li {
                 clear: both;
                 width: 100%;
@@ -124,7 +121,7 @@ Tabbed Content
                         float: left;
                         width: 100%;
                         a {
-                            padding: 10px 20px;
+                            padding: 10px 0px 10px 20px;
                             display: inline-block;
                             border-left: 0px;
                             font-weight: normal;
